fixed css z-index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -42,7 +42,7 @@ body::before{
     background-repeat: repeat;
 
     opacity: 0.7;
-    z-index: 0;
+    z-index: -1;
 }
 
 .header-topPage{
